# miner

./: Cargo.toml  README.md  _sha256.wgsl  sha256.wgsl
.github/workflows/: ci.yml  release.yml
docs/: cli.tape
shaders/: sha256.wgsl
src/: block.rs  error.rs  gpu.rs  hash.rs  lib.rs  main.rs  miner.rs  rpc.rs
src/gpu/: mod.rs  options.rs
src/rpc/: auth.rs  error.rs  mod.rs
