[package]
name = "miner"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22"
bitcoin = "0.31"
bytemuck = "1.15.0"
clap = { version = "4", features = ["derive"] }
futures = "0.3.30"
hex = { version = "0.4", features = ["serde"] }
num_cpus = "1"
oneshot = "0.1.6"
rayon = "1"
serde = { version = "1", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
ureq = { version = "2", features = ["json"] }
wgpu = "0.19.3"
